--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Sebastian "Sub" Hernandez</h1>
     <table align="center">
       <tr>
-        <th>Latest Release:</th>
+        <th>Latest Release</th>
         <th>Social Media</th>
       </tr>
       <tr>
@@ -28,41 +28,54 @@
         </td>
       </tr>
     </table>
-    <div id="about">
-      <h2>About <i>Sebastian</i>:</h2>
-      <p>&nbsp;&nbsp;&nbsp;Sebastian's self-titled debut album features 9 new tracks written by him as well as his 2 previous iconic singles. This new album introduces an expansion on pop music, alternative rock, jazz, and other formats, as well as Sebastian's newfound capabilities as a vocalist, producer, and composer.</p>
+    <p align="center">See <a href="Releases/Sebastian.html"><i>Sebastian</i> (2024)</a>.</p>
+    <h3>Latest Music Video:</h3>
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/t_zGNV99y1c"></iframe>
+    <p align="center">See <a href="Songs/Peace-and-Quiet.html">"Peace and Quiet"</a>.</p>
+    <h3>Latest Cover:</h3>
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/3LxCjIoZ8ic"></iframe>
+    <div id="space"></div>
+    <div id="footer">
       <table align="center">
         <tr>
-          <th colspan="2">Track Listing</th>
-        </tr>
-        <tr>
-          <td>Side one:</td>
-          <td>Side two:</td>
+          <th>Main Pages</th>
+          <th>Singles</th>
+          <th>Albums</th>
+          <th>EP's</th>
         </tr>
         <tr>
           <td>
-            <ol>
-              <li>Listen To This Song</li>
-              <li>Again Someday</li>
-              <li>Play a Game</li>
-              <li>Welcome Home</li>
-              <li>Peace and Quiet</li>
-              <li>It Is What It Is</li>
-            </ol>
+            <a href="index.html">Homepage</a>
           </td>
           <td>
-            <ol>
-              <li>Fly High</li>
-              <li>Hello, Teacher</li>
-              <li>Burning</li>
-              <li>Hug of Love</li>
-              <li>Where'd You Go?</li>
-              <li>Just a Friend</li>
-              <li>The Good Times</li>
-            </ol>
+            <a href="Releases/Peace-and-Quiet.html"><i>Peace and Quiet</i> (2023)</a>
           </td>
+          <td>
+            <a href="Releases/Sebastian.html"><i>Sebastian</i> (2024)</a>
+          </td>
+          <td>
+            Coming soon...
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <a href="Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <a href="Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
+          </td>
+          <td></td>
+          <td></td>
         </tr>
       </table>
+      <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
+      <p align="center">© 2024 Sebastian "Sub" Hernandez</p>
     </div>
   </body>
 </html>
