--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <iframe width="720" height="405" src="https://www.youtube.com/embed/t_zGNV99y1c"></iframe>
     <p align="center">See <a href="Songs/Peace-and-Quiet.html">"Peace and Quiet"</a>.</p>
     <h3>Latest Cover:</h3>
-    <iframe width="720" height="405" src="https://www.youtube.com/embed/7Gz7-02pRC8"></iframe>
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/jfSac8afsgg"></iframe>
     <div id="space"></div>
     <div id="footer">
       <table align="center">
