--- a/Releases/Sebastian.html
+++ b/Releases/Sebastian.html
@@ -31,14 +31,24 @@
         <tr>
           <td>
             <ol>
-              <li>Listen To This Song</li>
-              <li>Again Someday</li>
-              <li>Play a Game</li>
-              <li>Welcome Home</li>
+              <li>
+                <a href="../Songs/Listen-To-This-Song.html">Listen To This Song</a>
+              </li>
+              <li>
+                <a href="../Songs/Again-Someday.html">Again Someday</a>
+              </li>
+              <li>
+                <a href="../Songs/Play-a-Game.html">Play a Game</a>
+              </li>
+              <li>
+                <a href="../Songs/Welcome-Home.html">Welcome Home</a>
+              </li>
               <li>
                 <a href="../Songs/Peace-and-Quiet.html">Peace and Quiet</a>
               </li>
-              <li>It Is What It Is</li>
+              <li>
+                <a href="../Songs/It-Is-What-It-Is.html">It Is What It Is</a>
+              </li>
             </ol>
           </td>
           <td>
