--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="https://www.youtube.com/@SebastianSubHernandez">YouTube</a></li>
             <li><a href="https://soundcloud.com/sebazcan-hernandes">Soundcloud</a></li>
             <li><a href="https://open.spotify.com/artist/4JKplakG7GzH7mkTOIIXwg">Spotify</a></li>
+            <li><a href="https://www.reddit.com/r/SebastianSubHernandez/">Reddit<br>(Community Subreddit)</a></li>
           </ul>
         </td>
       </tr>
