--- a/Releases/Sebastian.html
+++ b/Releases/Sebastian.html
@@ -53,19 +53,27 @@
           </td>
           <td>
             <ol>
-              <li>Fly High</li>
+              <li>
+                <a href="../Songs/Fly-High.html">Fly High</a>
+              </li>
               <li>
                 <a href="../Songs/Hello-Teacher.html">Hello, Teacher</a>
               </li>
-              <li>Burning</li>
+              <li>
+                <a href="../Songs/Burning.html">Burning</a>
+              </li>
               <li>
                 <a href="../Songs/Hug-of-Love.html">Hug of Love</a>
               </li>
               <li>
                 <a href="../Songs/Whered-You-Go.html">Where'd You Go?</a>
               </li>
-              <li>Just a Friend</li>
-              <li>The Good Times</li>
+              <li>
+                <a href="../Songs/Just-a-Friend.html">Just a Friend</a>
+              </li>
+              <li>
+                <a href="../Songs/The-Good-Times.html">The Good Times</a>
+              </li>
             </ol>
           </td>
         </tr>
