--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <tr>
         <td>
           <a href="https://open.spotify.com/album/7iw08Tl2JfrSYz0CI2DFA6">
-            <img src="Release.png" width="250px" height="250px">
+            <img src="Releases/Images/A01.png" width="250px" height="250px">
           </a>
         </td>
         <td>
