--- a/Releases/Memories-From-My-Own-Dreams.html
+++ b/Releases/Memories-From-My-Own-Dreams.html
@@ -4,10 +4,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../styles.css">
-    <title>Album: Sebastian (2024) - Sebastian "Sub" Hernandez</title>
+    <title>EP: Memories From My Own Dreams (2024) - Sebastian "Sub" Hernandez</title>
   </head>
   <body>
-    <h1>Sebastian (2024)</h1>
+    <h1>Memories From My Own Dreams (2024)</h1>
     <div align="center">
       <a>
         <img src="Images/E01.jpg" width="400px" height="400px">
