--- a/Releases/Sebastian.html
+++ b/Releases/Sebastian.html
@@ -18,7 +18,7 @@
       <p>&nbsp;&nbsp;&nbsp;Sebastian's self-titled debut album features 9 new tracks written by him as well as his 2 previous iconic singles. This new album introduces an expansion on pop music, alternative rock, jazz, and other formats, as well as Sebastian's newfound capabilities as a vocalist, producer, and composer.</p>
       <ul>
         <li>Release Date: January 29, 2024</li>
-        <li>Genres: Alternative Rock, Pop, Jazz</li>
+        <li>Genres: Alternative rock, Pop, Jazz</li>
       </ul>
       <table align="center">
         <tr>
@@ -99,7 +99,7 @@
             <a href="../Releases/Sebastian.html"><i>Sebastian</i> (2024)</a>
           </td>
           <td>
-            Coming soon...
+            <a href="../Releases/Memories-From-My-Own-Dreams.html"><i>Memories From My Own Dreams</i> (2024)</a>
           </td>
         </tr>
         <tr>
