--- a/Releases/Memories-From-My-Own-Dreams.html
+++ b/Releases/Memories-From-My-Own-Dreams.html
@@ -18,7 +18,7 @@
       <p>&nbsp;&nbsp;&nbsp;Sleep tight. You need it. This EP revolves around Sebastian's passions, interests, and potentials. Each song is kindled to be a company to all listeners to let them know that we should remain optimistic no matter what.</p>
       <ul>
         <li>Release Date: June 15, 2024</li>
-        <li>Genres: Alternative Rock, Pop rock, Art rock</li>
+        <li>Genres: Rock, Pop</li>
       </ul>
       <table align="center">
         <tr>
