--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </tr>
       <tr>
         <td>
-          <a href="https://open.spotify.com/album/7iw08Tl2JfrSYz0CI2DFA6">
-            <img src="Releases/Images/A01.jpg" width="250px" height="250px">
+          <a href="https://youtube.com/playlist?list=PLSqdrMtbvVxebj9sG7bYqSLZ-pAV-Ei4U">
+            <img src="Releases/Images/E01.jpg" width="250px" height="250px">
           </a>
         </td>
         <td>
