--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </td>
       </tr>
     </table>
-    <p align="center">See <a href="Releases/Sebastian.html"><i>Sebastian</i> (2024)</a>.</p>
+    <p align="center">See <a href="Releases/Memories-From-My-Own-Dreams.html"><i>Memories From My Own Dreams</i> (2024)</a>.</p>
     <h3>Latest Music Video:</h3>
     <iframe width="720" height="405" src="https://www.youtube.com/embed/t_zGNV99y1c"></iframe>
     <p align="center">See <a href="Songs/Peace-and-Quiet.html">"Peace and Quiet"</a>.</p>
@@ -59,7 +59,9 @@
           </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            About Sebastian<br><i>Coming soon...</i>
+          </td>
           <td>
             <a href="Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
           </td>
@@ -67,7 +69,9 @@
           <td></td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            Merchandise<br>(Nonexistent For Now)
+          </td>
           <td>
             <a href="Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
