--- a/Releases/Memories-From-My-Own-Dreams.html
+++ b/Releases/Memories-From-My-Own-Dreams.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Memories From My Own Dreams (2024)</h1>
     <div align="center">
-      <a>
+      <a href="https://open.spotify.com/album/2wb0A5zzbGbGnlaOks4Nrw">
         <img src="Images/E01.jpg" width="400px" height="400px">
       </a>
     </div>
