--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <td>
-          <a href="https://youtube.com/playlist?list=PLSqdrMtbvVxebj9sG7bYqSLZ-pAV-Ei4U">
+          <a href="https://open.spotify.com/album/2wb0A5zzbGbGnlaOks4Nrw">
             <img src="Releases/Images/E01.jpg" width="250px" height="250px">
           </a>
         </td>
