--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
         </tr>
         <tr>
           <td>
-            <a href="index.html">Homepage</a>
+            <a href="../index.html">Homepage</a>
           </td>
           <td>
-            <a href="Releases/Peace-and-Quiet.html"><i>Peace and Quiet</i> (2023)</a>
+            <a href="../Releases/Peace-and-Quiet.html"><i>Peace and Quiet</i> (2023)</a>
           </td>
           <td>
-            <a href="Releases/Sebastian.html"><i>Sebastian</i> (2024)</a>
+            <a href="../Releases/Sebastian.html"><i>Sebastian</i> (2024)</a>
           </td>
           <td>
             <a href="../Releases/Memories-From-My-Own-Dreams.html"><i>Memories From My Own Dreams</i> (2024)</a>
@@ -63,17 +63,19 @@
             About Sebastian<br><i>Coming soon...</i>
           </td>
           <td>
-            <a href="Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
+            <a href="../Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i> (2024)</a>
+          </td>
         </tr>
         <tr>
           <td>
             Merchandise<br>(Nonexistent For Now)
           </td>
           <td>
-            <a href="Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
+            <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
           <td></td>
