--- a/Songs/Peace-and-Quiet.html
+++ b/Songs/Peace-and-Quiet.html
@@ -45,15 +45,21 @@
           </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            About Sebastian<br><i>Coming soon...</i>
+          </td>
           <td>
             <a href="../Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i> (2024)</a>
+          </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            Merchandise<br>(Nonexistent For Now)
+          </td>
           <td>
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
