--- a/Songs/Youre-Still-Here.html
+++ b/Songs/Youre-Still-Here.html
@@ -44,15 +44,21 @@
           </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            About Sebastian<br><i>Coming soon...</i>
+          </td>
           <td>
             <a href="../Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i> (2024)</a>
+          </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            Merchandise<br>(Nonexistent For Now)
+          </td>
           <td>
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
@@ -62,6 +68,7 @@
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
       <p align="center">© 2024 Sebastian "Sub" Hernandez</p>
+    </div>
     </div>
   </body>
 </html>
