--- a/Releases/Memories-From-My-Own-Dreams.html
+++ b/Releases/Memories-From-My-Own-Dreams.html
@@ -31,14 +31,22 @@
         <tr>
           <td>
             <ol>
-              <li>Blanket</li>
-              <li>My Paper and Pen</li>
+              <li>
+                <a href="../Songs/Blanket.html">Blanket</a>
+              </li>
+              <li>
+                <a href="../Songs/My-Paper-and-Pen.html">My Paper and Pen</a>
+              </li>
             </ol>
           </td>
           <td>
             <ol>
-              <li>That Pretty Girl</li>
-              <li>Reaching Out</li>
+              <li>
+                <a href="../Songs/That-Pretty-Girl.html">That Pretty Girl</a>
+              </li>
+              <li>
+                <a href="../Songs/Reaching-Out.html">Reaching Out</a>
+              </li>
             </ol>
           </td>
         </tr>
@@ -68,15 +76,21 @@
           </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            About Sebastian<br><i>Coming soon...</i>
+          </td>
           <td>
             <a href="../Releases/Whered-You-Go.html"><i>Where'd You Go</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i> (2024)</a>
+          </td>
         </tr>
         <tr>
-          <td></td>
+          <td>
+            Merchandise<br>(Nonexistent For Now)
+          </td>
           <td>
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
