--- a/Songs/Blanket.html
+++ b/Songs/Blanket.html
@@ -7,7 +7,7 @@
     <title>Song: Blanket - Sebastian "Sub" Hernandez</title>
   </head>
   <body>
-    <h1>Burning</h1>
+    <h1>Blanket</h1>
     <div id="about">
       <h2>Song Bio:</h2>
       <p>&nbsp;&nbsp;&nbsp;She said to me... to relax, slow down, and get rest. Let "Blanket" sink you in to the dreams that even Sebastian wishes for you to appreciate.</p>
