--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </tr>
       <tr>
         <td>
-          <a href="https://open.spotify.com/album/2wb0A5zzbGbGnlaOks4Nrw">
-            <img src="Releases/Images/E01.jpg" width="250px" height="250px">
+          <a href="https://open.spotify.com/album/2d93a5STh3yggnKpEB3Ksr">
+            <img src="Releases/Images/E02.jpg" width="250px" height="250px">
           </a>
         </td>
         <td>
@@ -29,12 +29,12 @@
         </td>
       </tr>
     </table>
-    <p align="center">See <a href="Releases/Memories-From-My-Own-Dreams.html"><i>Memories From My Own Dreams</i> (2024)</a>.</p>
+    <p align="center">See <a href="Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i> (2024)</a>.</p>
     <h3>Latest Music Video:</h3>
     <iframe width="720" height="405" src="https://www.youtube.com/embed/t_zGNV99y1c"></iframe>
     <p align="center">See <a href="Songs/Peace-and-Quiet.html">"Peace and Quiet"</a>.</p>
     <h3>Latest Cover:</h3>
-    <iframe width="720" height="405" src="https://www.youtube.com/embed/Q1Mhz4NntU4"></iframe>
+    <iframe width="720" height="405" src="https://www.youtube.com/embed/_dUaj9E6KxE"></iframe>
     <div id="space"></div>
     <div id="footer">
       <table align="center">
@@ -82,7 +82,7 @@
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
-      <p align="center">© 2024 Sebastian "Sub" Hernandez</p>
+      <p align="center">© 2025 Sebastian "Sub" Hernandez</p>
     </div>
   </body>
 </html>
