--- a/Songs/My-Paper-and-Pen.html
+++ b/Songs/My-Paper-and-Pen.html
@@ -12,7 +12,7 @@
       <h2>Song Bio:</h2>
       <p>&nbsp;&nbsp;&nbsp;Ever wondered what it meant to be creative? It's all about company, with a paper and pen. Work your way and learn as Sub swings your body to the melody for what it means to be creative.</p>
       <h2>Background:</h2>
-      <p>&nbsp;&nbsp;&nbsp;Not wanting to shy away from other genres, Sebastian continued to pursue jazz styles, and this particular track was secured as the successor to <a href="../Songs/The-Good-Times.html">"The Good Times"</a>. What makes the track unique is the use of just bass and percussion as a backing track, focused entirely on building the base of a song while letting the vocals take over to do the job.</p>
+      <p>&nbsp;&nbsp;&nbsp;Not wanting to shy away from other genres, Sebastian continued to pursue jazz styles, and this particular track was secured as the successor to <a href="../Songs/The-Good-Times.html">"The Good Times."</a> What makes the track unique is the use of just bass and percussion as a backing track, focused entirely on building the base of a song while letting the vocals take over to do the job.</p>
       <h2>Other Information:</h2>
       <ul>
         <li>Original Release Date: June 15, 2024</li>
