--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <td>
           <ul>
             <li><a href="https://www.youtube.com/@SebastianSubHernandez">YouTube</a></li>
+            <li><a href="https://www.instagram.com/subisvibing/">Instagram</a></li>
             <li><a href="https://soundcloud.com/sebazcan-hernandes">Soundcloud</a></li>
             <li><a href="https://open.spotify.com/artist/4JKplakG7GzH7mkTOIIXwg">Spotify</a></li>
             <li><a href="https://www.reddit.com/r/SebastianSubHernandez/">Reddit<br>(Community Subreddit)</a></li>
