For Wan Dear Friend!

--- a/Releases/For-Wan-Dear-Friend.html
+++ b/Releases/For-Wan-Dear-Friend.html
@@ -4,21 +4,53 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../styles.css">
-    <title>Song: Hug of Love - Sebastian "Sub" Hernandez</title>
+    <title>EP: For Wan Dear Friend (2025) - Sebastian "Sub" Hernandez</title>
   </head>
   <body>
-    <h1>Hug of Love</h1>
+    <h1>For Wan Dear Friend (2025)</h1>
+    <div align="center">
+      <a href="https://open.spotify.com/album/4UUGKWuUb3UoHenjSn6DaO">
+        <img src="Images/E03.jpg" width="400px" height="400px">
+      </a>
+    </div>
     <div id="about">
-      <h2>Song Bio:</h2>
-      <p>&nbsp;&nbsp;&nbsp;A first attempt at a serenade, "Hug of Love" is your typical love song. As one of his first songs, Sub made use of basic chords when he first started out, which resulted in the song we know of today.</p>
-      <h2>Background:</h2>
-      <p>&nbsp;&nbsp;&nbsp;Written in late 2022, this song was derived from basic chord progressions. As the lyrics came along the same time as the melody, this song is one of the instances where no part of the songwriting process came first. This song was written in inspiration of his first few crushes.</p>
-      <h2>Other Information:</h2>
+      <h2>About <i>For Wan Dear Friend</i>:</h2>
+      <p>&nbsp;&nbsp;&nbsp;For the last third of this year, I have been involved with a community I now call home. To show my appreciation for said community, I dedicated this EP for <a href="https://twitch.tv/cerbervt">CerberVT</a> and all the minawan that made me super happy.</p>
       <ul>
-        <li>Original Release Date: May 30, 2023</li>
-        <li>First Released In: <a href="../Releases/Peace-and-Quiet.html">"Peace and Quiet" b/w "Hug of Love"</a></li>
-        <li>Genre/s: Pop, Soft rock, Ballad</li>
+        <li>Release Date: November 1, 2025</li>
+        <li>Genres: Indie pop, Singer-songwriter, Rockabilly</li>
       </ul>
+      <table align="center">
+        <tr>
+          <th colspan="2">Track Listing</th>
+        </tr>
+        <tr>
+          <td>Side one:</td>
+          <td>Side two:</td>
+        </tr>
+        <tr>
+          <td>
+            <ol>
+              <li>
+                <a href="../Songs/Even-Cake-Loves-You.html">Even Cake Loves You</a>
+              </li>
+              <li>
+                <a href="../Songs/Welcome-Back.html">Welcome Back (We Missed You)</a>
+              </li>
+            </ol>
+          </td>
+          <td>
+            <ol>
+              <li>
+                <a href="../Songs/She-is-Gold.html">She Is Gold</a>
+              </li>
+              <li>
+                <a href="../Songs/My-Thanks.html">My Thanks</a>
+              </li>
+            </ol>
+          </td>
+        </tr>
+      </table>
     </div>
     <div id="space"></div>
     <div id="footer">
