--- a/Releases/Memories-From-My-Own-Dreams.html
+++ b/Releases/Memories-From-My-Own-Dreams.html
@@ -95,7 +95,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
