--- a/Songs/Blanket.html
+++ b/Songs/Blanket.html
@@ -16,7 +16,7 @@
       <h2>Other Information:</h2>
       <ul>
         <li>Original Release Date: June 15, 2024</li>
-        <li>First Released In: <i>Memories From My Own Dreams</i></li>
+        <li>First Released In: <a href="../Releases/Memories-From-My-Own-Dreams.html"><i>Memories From My Own Dreams</i></a></li>
         <li>Genre/s: Neo-psychedelia, Pop, Pop rock</li>
       </ul>
     </div>
@@ -63,7 +63,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
