--- a/Songs/Celebrate.html
+++ b/Songs/Celebrate.html
@@ -16,7 +16,7 @@
       <h2>Other Information:</h2>
       <ul>
         <li>Original Release Date: December 1, 2024</li>
-        <li>First Released In: <i>A Breeze of Hernandez</i></li>
+        <li>First Released In: <i><a href="../Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i></a></i></li>
         <li>Genre/s: Holiday, Acoustic pop, Ambient, Experimental pop</li>
       </ul>
     </div>
@@ -63,7 +63,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
