--- a/Songs/My Thanks.html
+++ b/Songs/My Thanks.html
@@ -4,53 +4,21 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../styles.css">
-    <title>EP: A Breeze of Hernandez (2024) - Sebastian "Sub" Hernandez</title>
+    <title>Song: My Thanks - Sebastian "Sub" Hernandez</title>
   </head>
   <body>
-    <h1>A Breeze of Hernandez (2024)</h1>
-    <div align="center">
-      <a href="https://open.spotify.com/album/2d93a5STh3yggnKpEB3Ksr">
-        <img src="Images/E02.jpg" width="400px" height="400px">
-      </a>
-    </div>
+    <h1>My Thanks</h1>
     <div id="about">
-      <h2>About <i>A Breeze of Hernandez</i>:</h2>
-      <p>&nbsp;&nbsp;&nbsp;Happy holidays! Or... not? Whether it's merry or misery, the holiday season has arrived. Albeit, Sebastian did not intend to do anything specific for this EP, the spirits and atmosphere of December is very present here. Listen in and take yourself within a breeze of Hernandez and his raw holiday sound.</p>
+      <h2>Song Bio:</h2>
+      <p>&nbsp;&nbsp;&nbsp;Straying to more songwriting, Sebastian tries his hand to "progressive" music with a tribute!</p>
+      <h2>Background:</h2>
+      <p>&nbsp;&nbsp;&nbsp;Sebastian considers this composition to be his favorite off the <a href="https://twitch.tv/">Cerber</a>-dedicated EP. This was the first piece to introduce elements of progressive rock, with changes in time signature and tempo, though it did not reach the complexity normally found in progressive music. It also introduces beatbox percussion into the discography, which mainly came about when Sebastian didn't bother getting his software to play a drum track and instead used his mouth to make a beat. Even with the odd progression, he managed to keep the rockabilly spirit in the song.</p>
+      <h2>Other Information:</h2>
       <ul>
-        <li>Release Date: December 1, 2024</li>
-        <li>Genres: Holiday</li>
+        <li>Original Release Date: November 1, 2025</li>
+        <li>First Released In: <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a></li>
+        <li>Genre/s: Indie rock, Rockabilly</li>
       </ul>
-      <table align="center">
-        <tr>
-          <th colspan="2">Track Listing</th>
-        </tr>
-        <tr>
-          <td>Side one:</td>
-          <td>Side two:</td>
-        </tr>
-        <tr>
-          <td>
-            <ol>
-              <li>
-                <a href="../Songs/Warm-Cup.html">Warm Cup</a>
-              </li>
-              <li>
-                <a href="../Songs/Gifts-For.html">Gifts For...</a>
-              </li>
-            </ol>
-          </td>
-          <td>
-            <ol>
-              <li>
-                <a href="../Songs/Monsoon-Blues.html">Monsoon Blues</a>
-              </li>
-              <li>
-                <a href="../Songs/Celebrate.html">Celebrate</a>
-              </li>
-            </ol>
-          </td>
-        </tr>
-      </table>
     </div>
     <div id="space"></div>
     <div id="footer">
@@ -96,7 +64,8 @@
           </td>
           <td></td>
           <td>
-            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a></td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
