--- a/Songs/The-Glowing-Tree.html
+++ b/Songs/The-Glowing-Tree.html
@@ -16,7 +16,7 @@
       <h2>Other Information:</h2>
       <ul>
         <li>Original Release Date: November 1, 2023</li>
-        <li>First Released In: "You're Still Here" b/w "(As Long As) You're Still Here" (2023)</li>
+        <li>First Released In: <a href="../Releases/The-Glowing-Tree.html">"The Glowing Tree" b/w "(As Long As) You're Still Here"</a></li>
         <li>Genre/s: Christmas, Folk</li>
       </ul>
     </div>
@@ -63,7 +63,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
