--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       </tr>
       <tr>
         <td>
-          <a href="https://open.spotify.com/album/2d93a5STh3yggnKpEB3Ksr">
-            <img src="Releases/Images/E02.jpg" width="250px" height="250px">
+          <a href="https://open.spotify.com/album/4UUGKWuUb3UoHenjSn6DaO">
+            <img src="Releases/Images/E03.jpg" width="250px" height="250px">
           </a>
         </td>
         <td>
@@ -30,7 +30,7 @@
         </td>
       </tr>
     </table>
-    <p align="center">See <a href="Releases/A-Breeze-of-Hernandez.html"><i>A Breeze of Hernandez</i> (2024)</a>.</p>
+    <p align="center">See <a href="Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>.</p>
     <h3>Latest Music Video:</h3>
     <iframe width="720" height="405" src="https://www.youtube.com/embed/t_zGNV99y1c"></iframe>
     <p align="center">See <a href="Songs/Peace-and-Quiet.html">"Peace and Quiet"</a>.</p>
@@ -79,7 +79,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
