--- a/Songs/It-Is-What-It-Is.html
+++ b/Songs/It-Is-What-It-Is.html
@@ -16,7 +16,7 @@
       <h2>Other Information:</h2>
       <ul>
         <li>Original Release Date: January 29, 2024</li>
-        <li>First Released In: <i>Sebastian</i></li>
+        <li>First Released In: <a href="../Releases/Sebastian.html"><i>Sebastian</i></a></li>
         <li>Genre/s: Rock</li>
       </ul>
     </div>
@@ -63,7 +63,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
