--- a/Songs/Whered-You-Go.html
+++ b/Songs/Whered-You-Go.html
@@ -16,7 +16,7 @@
       <h2>Other Information:</h2>
       <ul>
         <li>Original Release Date: July 25, 2023</li>
-        <li>First Released In: "Where'd You Go?" b/w "Hello, Teacher" (2023)</li>
+        <li>First Released In: <a href="../Releases/Whered-You-Go.html">"Where'd You Go?" b/w "Hello, Teacher"</a></li>
         <li>Genre/s: Rock and Roll</li>
       </ul>
     </div>
@@ -63,7 +63,9 @@
             <a href="../Releases/The-Glowing-Tree.html"><i>The Glowing Tree</i> (2023)</a>
           </td>
           <td></td>
-          <td></td>
+          <td>
+            <a href="../Releases/For-Wan-Dear-Friend.html"><i>For Wan Dear Friend</i> (2025)</a>
+          </td>
         </tr>
       </table>
       <p align="center">The Official Sebastian "Sub" Hernandez Webpage</p>
